[SUREFIRE-1733] Surefire and Failsafe JPMS additions for JUnit 5.x execution